Fixed bug #50159 (wrong working directory in symlinked files)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@291496 c90b9560-bf6c-de11-be94-00142212c4b1